<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.gmail.unmacaque</groupId>
  <artifactId>spring</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Spring Boot Projects</name>
  <url>https://bitbucket.org/unmacaque/spring</url>
  <packaging>pom</packaging>

  <properties>
    <java.version>11</java.version>
    <jsoup.version>1.9.2</jsoup.version>
    <spring-cloud.version>Finchley.SR1</spring-cloud.version>
    <xstream.version>1.4.10</xstream.version>
  </properties>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.1.0.RELEASE</version>
    <relativePath/>
  </parent>

  <modules>
    <module>spring-angular</module>
    <module>spring-angularjs</module>
    <module>spring-aop</module>
    <module>spring-boot</module>
    <module>spring-boot-actuator</module>
    <module>spring-boot-docker</module>
    <module>spring-cache</module>
    <module>spring-data</module>
    <module>spring-restdocs</module>
    <module>spring-security</module>
    <module>spring-togglz</module>
    <module>spring-web</module>
    <module>spring-webflux</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.jsoup</groupId>
        <artifactId>jsoup</artifactId>
        <version>${jsoup.version}</version>
      </dependency>
      <dependency>
        <groupId>com.thoughtworks.xstream</groupId>
        <artifactId>xstream</artifactId>
        <version>${xstream.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.tomakehurst</groupId>
        <artifactId>wiremock</artifactId>
        <version>${wiremock.version}</version>
        <scope>runtime, test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
